--- a/proxysql/proxysql.cnf
+++ b/proxysql/proxysql.cnf
@@ -3,7 +3,10 @@ datadir="/var/lib/proxysql"
 admin_variables=
 {
     admin_credentials="admin:admin;radmin:radmin"
+    stats_credentials="statadmin:statadmin"
     mysql_ifaces="0.0.0.0:6032"
+    web_enabled=true
+    web_port=6080
     refresh_interval=2000
     cluster_username="cluster1"
     cluster_password="clusterpassword1"
